--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
+    "fastify-cors": "^6.1.0",
     "mongoose": "^8.2.1",
     "nodemon": "^3.1.0"
   }
